# rust-docker-demo

./: .gitignore  Cargo.toml  Dockerfile  Procfile  heroku.yml
resources/static/: index.html
src/: main.rs
