[package]
name = "rust-docker-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-web-lab = "0.16.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
